Added additional bindings
